# my_rust

projects/book_study1/: Cargo.toml
projects/book_study1/src/: lib.rs  main.rs
projects/book_study_unit3/: Cargo.toml
projects/book_study_unit3/src/: lib.rs  main.rs
projects/book_study_unit4/: Cargo.toml  es.txt
projects/book_study_unit4/src/: lib.rs  main.rs
projects/book_study_unit4/src/pracs/: mod.rs
projects/book_study_unit4/src/pracs/prac4_1/: mod.rs  prac4_1_1.rs  prac4_1_2.rs  prac_1.rs  prac_2.rs  prac_4_1_1.rs
projects/book_study_unit4/src/pracs/prac4_10/: mod.rs  prac4_10_1.rs
projects/book_study_unit4/src/pracs/prac4_10/hello_macro_derive/src/: lib.rs
projects/book_study_unit4/src/pracs/prac4_11/: mod.rs  prac1.rs  prac2.rs  prac3.rs  prac4.rs  tokio_learn.rs
projects/book_study_unit4/src/pracs/prac4_2/: mod.rs  other.rs  prac1.rs  prac2.rs  prac4_2_1.rs
projects/book_study_unit4/src/pracs/prac4_3/: mod.rs  prac1.rs  prac_2.rs  prac_4.rs
projects/book_study_unit4/src/pracs/prac4_4/: mod.rs  prac4_4_1.rs  prac4_4_2.rs  prac4_4_3.rs  prac4_4_4.rs  prac4_4_5.rs
projects/book_study_unit4/src/pracs/prac4_5/: mod.rs  prac4_5_1.rs  prac4_5_2.rs
projects/book_study_unit4/src/pracs/prac4_6/: mod.rs  prac4_6_3.rs  prac4_6_4.rs  prac4_6_5.rs  prac4_6_6.rs  prac_4_6_1.rs
projects/book_study_unit4/src/pracs/prac4_7/: mod.rs  prac4_7.rs
projects/book_study_unit4/src/pracs/prac4_8/: mod.rs  prac4_8.rs
projects/book_study_unit4/src/pracs/prac4_9/: mod.rs  prac4_9_1.rs
projects/guessing_game/: Cargo.toml
projects/guessing_game/src/: main.rs
(+20 files in other folders)
