workspace = { members = ["src/pracs/prac4_10/hello_macro_derive"] }
[package]
name = "book_study_unit4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.31"
num-traits = "0.2.14"
num-derive = "0.3.3"
ouroboros = "0.18.3"
thread_local = "1.1.7"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.57"
anyhow = "1.0.80"
hello_macro_derive= {path = "src/pracs/prac4_10/hello_macro_derive"}

#[lib]
#proc-macro = true
